...
import androidx.compose.ui.platform.testTag
import androidx.compose.ui.text.font.FontWeight
import androidx.compose.ui.text.style.TextAlign
import org.giste.navigator.ui.theme.NavigatorTheme

const val TRIP_TOTAL = "TRIP_TOTAL"
const val TRIP_PARTIAL = "TRIP_PARTIAL"

@Composable
fun TripTotal(
    distance: String,
    modifier: Modifier = Modifier,
) {
...
