...

    private fun setPartial(partial: Int) {
        if (partial in 0..999_990) {
            viewModelScope.launch { tripRepository.setPartial(partial * 10) }
        } else {
            throw IllegalArgumentException(
                "Partial must represent a number between 0 and ${"%,.2f".format(999.99f)}"
            )
        }
    }

    sealed class UiAction {
        data class SetUri(val uri: String) : UiAction()
...
