...
import org.giste.navigator.ui.NumberDialogTags.NUMBER_DIALOG_KEY_DELETE
import org.giste.navigator.ui.theme.NavigatorTheme

private const val DELETE = '<'

object NumberDialogTags {
    const val NUMBER_DIALOG_FIELD = "NUMBER_DIALOG_FIELD"
    const val NUMBER_DIALOG_KEY_0 = "NUMBER_DIALOG_KEY_0"
    const val NUMBER_DIALOG_KEY_1 = "NUMBER_DIALOG_KEY_1"
    const val NUMBER_DIALOG_KEY_2 = "NUMBER_DIALOG_KEY_2"
    const val NUMBER_DIALOG_KEY_3 = "NUMBER_DIALOG_KEY_3"
    const val NUMBER_DIALOG_KEY_4 = "NUMBER_DIALOG_KEY_4"
    const val NUMBER_DIALOG_KEY_5 = "NUMBER_DIALOG_KEY_5"
    const val NUMBER_DIALOG_KEY_6 = "NUMBER_DIALOG_KEY_6"
    const val NUMBER_DIALOG_KEY_7 = "NUMBER_DIALOG_KEY_7"
    const val NUMBER_DIALOG_KEY_8 = "NUMBER_DIALOG_KEY_8"
    const val NUMBER_DIALOG_KEY_9 = "NUMBER_DIALOG_KEY_9"
    const val NUMBER_DIALOG_KEY_DELETE = "NUMBER_DIALOG_KEY_DELETE"
}

@Preview(
    name = "Tab Active 3 Landscape",
    showBackground = true,
    device = "spec:width=853dp,height=485dp, isRound=false, orientation=landscape",
...
